--- a/ClassBoard/ClassBoard/Base.lproj/Main.storyboard
+++ b/ClassBoard/ClassBoard/Base.lproj/Main.storyboard
@@ -419,87 +419,6 @@
             </objects>
             <point key="canvasLocation" x="2114" y="1074"/>
         </scene>
-        <!--DocumentVC-->
-        <scene sceneID="leh-wW-syn">
-            <objects>
-                <viewController id="N2E-t8-h4j" customClass="DocumentVC" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="okX-mT-hC9"/>
-                        <viewControllerLayoutGuide type="bottom" id="EWN-fy-fYo"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="ucI-w1-FsW">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" systemItem="favorites" id="sL4-ao-4fI"/>
-                    <navigationItem key="navigationItem" id="our-n5-hb5"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bzH-lS-mcx" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3042" y="2218"/>
-        </scene>
-        <!--DocumentVC-->
-        <scene sceneID="N21-Ls-pLd">
-            <objects>
-                <viewController id="U4h-Pu-x4X" customClass="DocumentVC" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="FQv-lR-F2h"/>
-                        <viewControllerLayoutGuide type="bottom" id="bdB-5h-ykK"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="401-p4-ogV">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" systemItem="mostRecent" id="IYf-eI-JJa"/>
-                    <toolbarItems/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="F37-8v-gNc" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2204" y="2938"/>
-        </scene>
-        <!--DocumentVC-->
-        <scene sceneID="HOp-fC-4a2">
-            <objects>
-                <viewController id="O3D-vY-11S" customClass="DocumentVC" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="zMl-rv-uhl"/>
-                        <viewControllerLayoutGuide type="bottom" id="K4f-t7-pzo"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8V8-Rg-820">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" systemItem="search" id="F2j-pR-mXK"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aW5-zA-eV7" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="821" y="3494"/>
-        </scene>
-        <!--DocumentVC-->
-        <scene sceneID="lyo-Uq-vGb">
-            <objects>
-                <viewController id="bE3-n1-hkk" customClass="DocumentVC" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="a3Y-Q6-DKu"/>
-                        <viewControllerLayoutGuide type="bottom" id="W1h-hg-UNR"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="24z-FR-bbs">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" systemItem="topRated" id="YCV-wR-bqn"/>
-                    <toolbarItems/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SLf-gU-JwI" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1479" y="3388"/>
-        </scene>
         <!--Choose Handouts-->
         <scene sceneID="pV9-Jm-o6c">
             <objects>
@@ -738,7 +657,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="53h-io-eFO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6390" y="-1337"/>
+            <point key="canvasLocation" x="6322" y="-1297"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="igw-D6-ixI">
@@ -783,7 +702,34 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eN1-34-mB4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="436" y="2212"/>
+            <point key="canvasLocation" x="-96" y="2236"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="3yF-kh-CF0">
+            <objects>
+                <tableViewController id="u0X-Mt-8wa" customClass="DocTitleTVC" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="La7-yq-8qn">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TitleCell" id="fJp-tw-1HD">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fJp-tw-1HD" id="jt7-gS-XUK">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="u0X-Mt-8wa" id="WHv-pv-S4L"/>
+                            <outlet property="delegate" destination="u0X-Mt-8wa" id="dst-Cw-sS2"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Item" id="qmo-GP-TT2"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HBn-nv-9RZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="429" y="3616"/>
         </scene>
         <!--DocumentTBC-->
         <scene sceneID="Mbw-Fl-zI1">
@@ -803,15 +749,40 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="N2E-t8-h4j" kind="relationship" relationship="viewControllers" id="RlS-7V-umX"/>
-                        <segue destination="U4h-Pu-x4X" kind="relationship" relationship="viewControllers" id="WDA-9t-dMY"/>
-                        <segue destination="bE3-n1-hkk" kind="relationship" relationship="viewControllers" id="b1G-MI-uqI"/>
-                        <segue destination="O3D-vY-11S" kind="relationship" relationship="viewControllers" id="zuo-1Z-SNi"/>
+                        <segue destination="u0X-Mt-8wa" kind="relationship" relationship="viewControllers" id="ZeW-1R-dz4"/>
+                        <segue destination="Gs7-hP-3i6" kind="relationship" relationship="viewControllers" id="BnE-su-koa"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rkD-Z7-J5X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1242" y="2218"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="U1m-VL-Ol7">
+            <objects>
+                <tableViewController id="Gs7-hP-3i6" customClass="DocClassTVC" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="76W-bh-OFX">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="nzq-PB-Q2v">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nzq-PB-Q2v" id="BY3-16-61T">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Gs7-hP-3i6" id="Mrd-f7-xma"/>
+                            <outlet property="delegate" destination="Gs7-hP-3i6" id="nG8-WV-me5"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Item" id="ggz-wQ-gxJ"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cKN-uQ-kGW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1585" y="3616"/>
         </scene>
     </scenes>
     <resources>
@@ -830,7 +801,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="9xQ-Vr-LXa"/>
         <segue reference="QaU-7h-pGT"/>
-        <segue reference="kLz-91-DUF"/>
+        <segue reference="TCw-F8-Zgr"/>
         <segue reference="TLA-V3-tj8"/>
     </inferredMetricsTieBreakers>
 </document>
