felix is a dick

--- a/ClassBoard/ClassBoard/Base.lproj/Main.storyboard
+++ b/ClassBoard/ClassBoard/Base.lproj/Main.storyboard
@@ -799,9 +799,9 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="9xQ-Vr-LXa"/>
-        <segue reference="QaU-7h-pGT"/>
+        <segue reference="CzW-oF-i3a"/>
         <segue reference="TCw-F8-Zgr"/>
         <segue reference="TLA-V3-tj8"/>
+        <segue reference="9xQ-Vr-LXa"/>
     </inferredMetricsTieBreakers>
 </document>
