the caching issue has been resolved. There is occasional null window issue

--- a/ClassBoard/ClassBoard/Base.lproj/Main.storyboard
+++ b/ClassBoard/ClassBoard/Base.lproj/Main.storyboard
@@ -801,7 +801,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="CzW-oF-i3a"/>
         <segue reference="TCw-F8-Zgr"/>
-        <segue reference="TLA-V3-tj8"/>
+        <segue reference="zE7-xz-jvs"/>
         <segue reference="9xQ-Vr-LXa"/>
     </inferredMetricsTieBreakers>
 </document>
