--- a/ClassBoard/ClassBoard/Base.lproj/Main.storyboard
+++ b/ClassBoard/ClassBoard/Base.lproj/Main.storyboard
@@ -751,6 +751,7 @@
                     <connections>
                         <segue destination="u0X-Mt-8wa" kind="relationship" relationship="viewControllers" id="ZeW-1R-dz4"/>
                         <segue destination="Gs7-hP-3i6" kind="relationship" relationship="viewControllers" id="BnE-su-koa"/>
+                        <segue destination="pxq-KX-oBd" kind="relationship" relationship="viewControllers" id="qjg-0l-72D"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rkD-Z7-J5X" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -761,12 +762,12 @@
         <scene sceneID="U1m-VL-Ol7">
             <objects>
                 <tableViewController id="Gs7-hP-3i6" customClass="DocClassTVC" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="76W-bh-OFX">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="76W-bh-OFX">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="nzq-PB-Q2v">
+                            <tableViewCell contentMode="scaleToFill" restorationIdentifier="ClassCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="ClassCell" id="nzq-PB-Q2v">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nzq-PB-Q2v" id="BY3-16-61T">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -782,7 +783,44 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cKN-uQ-kGW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1585" y="3616"/>
+            <point key="canvasLocation" x="1588" y="3586"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="mbR-hC-AGu">
+            <objects>
+                <viewController id="pxq-KX-oBd" customClass="DocGroupVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KPS-l0-ucY"/>
+                        <viewControllerLayoutGuide type="bottom" id="RYN-Aa-k95"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3Jo-Wu-GAS">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="iUb-dX-7ee">
+                                <rect key="frame" x="0.0" y="56" width="768" height="968"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="dFU-7E-JH9">
+                                        <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dFU-7E-JH9" id="YTC-0X-QGS">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="1Vf-EO-MJr"/>
+                    <connections>
+                        <outlet property="groupTable" destination="iUb-dX-7ee" id="hRO-VV-ztg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ojz-iw-XYa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2543" y="2642"/>
         </scene>
     </scenes>
     <resources>
